--- a/Aeon-Cronicles/Aeon-Cronicles.vcxproj.filters
+++ b/Aeon-Cronicles/Aeon-Cronicles.vcxproj.filters
@@ -69,4 +69,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="TileData.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
