--- a/Aeon-Cronicles/Aeon-Cronicles.vcxproj.filters
+++ b/Aeon-Cronicles/Aeon-Cronicles.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="tilelevel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="spawnBullet.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -66,6 +69,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="tilelevel.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="spawnBullet.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
